Fixed blurry header image

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import "images";
 
 #header_img {
+  image-rendering: pixelated;
   background-image: url({{ site.baseurl }}/assets/img/header/peaceriver1920.jpg);
   @media screen and (min-width: 1921px) { background-image: url({{ site.baseurl }}/assets/img/header/peaceriver2048.jpg); }
   @media screen and (max-width: 1920px) { background-image: url({{ site.baseurl }}/assets/img/header/peaceriver1920.jpg); }
